<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright © 2018 TransTracks. All rights reserved.
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->

<com.shelbeely.opentransition.ui.home.HomeView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <ImageButton
        android:id="@+id/home_take_photo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/edge_margin_small"
        android:layout_marginTop="32dp"
        android:background="@color/transparent"
        android:contentDescription="@string/take_photo"
        android:src="@drawable/ic_photo_camera_white_24dp"
        app:layout_constraintBottom_toTopOf="@id/home_day_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/home_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/edge_margin_small"
        android:background="@color/transparent"
        android:contentDescription="@string/edit_settings"
        android:src="@drawable/ic_settings_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/home_previous_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/previous_record"
        android:src="@drawable/previous"
        app:layout_constraintBottom_toBottomOf="@id/home_day_title"
        app:layout_constraintEnd_toStartOf="@+id/home_day_title"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/home_day_title"
        app:layout_constraintVertical_bias="0.75" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/home_day_title"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/white_text_selector"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/home_divider_one"
        app:layout_constraintEnd_toStartOf="@+id/home_next_record"
        app:layout_constraintStart_toEndOf="@+id/home_previous_record"
        app:layout_constraintTop_toBottomOf="@id/home_take_photo"
        tools:text="10 Years, 9 Months, 7 Days " />

    <ImageButton
        android:id="@+id/home_next_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/next_record"
        android:src="@drawable/next"
        app:layout_constraintBottom_toBottomOf="@id/home_day_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_day_title"
        app:layout_constraintTop_toTopOf="@id/home_day_title"
        app:layout_constraintVertical_bias="0.75" />

    <ImageView
        android:id="@+id/home_divider_one"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:importantForAccessibility="no"
        android:src="@drawable/fading_line"
        app:layout_constraintBottom_toTopOf="@id/home_date_summary_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_day_title" />

    <FrameLayout
        android:id="@+id/home_date_summary_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/home_divider_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_divider_one" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/home_dates_end_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="home_date_summary_container" />

    <ImageButton
        android:id="@+id/home_milestones"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@color/transparent"
        android:contentDescription="@string/milestones"
        android:src="@drawable/ic_milestone_unselected"
        app:layout_constraintBottom_toBottomOf="@+id/home_date_summary_container"
        app:layout_constraintStart_toEndOf="@+id/home_dates_end_barrier"
        app:layout_constraintTop_toTopOf="@+id/home_date_summary_container" />

    <ImageView
        android:id="@+id/home_divider_two"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:importantForAccessibility="no"
        android:src="@drawable/fading_line"
        app:layout_constraintBottom_toTopOf="@id/home_face_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_date_summary_container" />

    <Button
        android:id="@+id/home_face_gallery"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_transparent_button"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/face_gallery"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white_text_selector"
        app:layout_constraintBottom_toTopOf="@id/home_face_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_divider_two" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_face_images"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:paddingStart="@dimen/edge_margin_small"
        android:paddingEnd="@dimen/edge_margin_small"
        app:layout_constraintBottom_toTopOf="@id/home_body_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_face_gallery" />

    <Button
        android:id="@+id/home_body_gallery"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/rounded_transparent_button"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/body_gallery"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white_text_selector"
        app:layout_constraintBottom_toTopOf="@id/home_body_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_face_images" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_body_images"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:paddingStart="@dimen/edge_margin_small"
        android:paddingEnd="@dimen/edge_margin_small"
        app:layout_constraintBottom_toTopOf="@id/home_audio_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_body_gallery" />

    <Button
        android:id="@+id/home_audio_gallery"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/rounded_transparent_button"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/audio_gallery"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white_text_selector"
        app:layout_constraintBottom_toTopOf="@id/home_audio_images"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_body_images" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_audio_images"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:paddingStart="@dimen/edge_margin_small"
        android:paddingEnd="@dimen/edge_margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_audio_gallery" />
</com.shelbeely.opentransition.ui.home.HomeView>
